memodawg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memodawg-api
  namespace: memodawg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memodawg
      tier: api
  template:
    metadata:
      labels:
        app: memodawg
        tier: api
    spec:
      containers:
      - name: api
        image: pipelinedave/memodawg-api:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
