memodawg-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memodawg-frontend-service
  namespace: memodawg
spec:
  selector:
    app: memodawg
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
