memodawg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memodawg-ingress
  namespace: memodawg
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: memodawg.stillon.top
    http:
      paths:
      - path: /transcribe
        pathType: Exact
        backend:
          service:
            name: memodawg-api-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memodawg-frontend-service
            port:
              number: 80
  tls:
  - hosts:
    - memodawg.stillon.top
    secretName: memodawg.stillon.top-tls
